--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 BASE_URL=
 PASS=
+SLACK_WEBHOOK_URL=
 
 ADMIN_USER=
 ADMIN_EMAIL=
@@ -15,3 +16,8 @@ CONTRIBUTOR_EMAIL=
 
 SUBSCRIBER_USER=
 SUBSCRIBER_EMAIL=
+
+EJ_CANDIDATE_ONE_EMAIL=
+EJ_CANDIDATE_ONE_PASSWORD=
+EJ_COMPANY_ONE_EMAIL=
+EJ_COMPANY_ONE_PASSWORD=
